--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,13 @@
     <title>Readers Choice</title>
 </head>
 <body>
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+        <li>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
 {% block content %}{% endblock %}
 </body>
 </html>
