--- a/templates/post_details.html
+++ b/templates/post_details.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 
@@ -65,6 +66,9 @@
         <h1>{% block title %} {{ post.title }} {% endblock title %}</h1>
         <p class=" text-muted">{{ post.author }} | {{ post.created_at }}</p>
         <p class="card-text ">{{ post.content | safe }}</p>
+        {% for image in images %}
+        <img src="{{image.image.url}}"/>
+        {% endfor %}
       </div>
     </div>
     <style>
